some informations about building and installing using Maven 2
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@19969 2c8c2297-680c-4500-a755-649f80e260dd

--- a/README
+++ b/README
@@ -36,7 +36,8 @@ http://wiki.apertium.org/wiki/Lttoolbox-java
 		- make
 		- sudo make install
 
-
+	b.2 Building & installing using Maven 2 (http://maven.apache.org)
+		- mvn install
 
 
 
