Added myself to AUTHORS.
git-svn-id: file:///home/apertium/svn-mirror/apertium-sf-net/trunk/lttoolbox-java@23763 2c8c2297-680c-4500-a755-649f80e260dd

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
+(c) 2010        Stephen Tigner <stephen.tigner@gmail.com>
+                http://stephentigner.com/
+                during Google Summer of Code
 
 (c) 2009--2010, Jacob Nordfalk <jacob.nordfalk@gmail.com>
 
